<resources>
    <string name="app_name">Find Job</string>
    <string name="job_header">Job Header *</string>
    <string name="job_information">Job Information *</string>
    <string name="contact_information">Contact Information *</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="add_new_job_header_text">Job Header</string>
    <string name="add_new_job_information_text">Job Information</string>
    <string name="add_new_contact_information_text">Contact Information</string>
    <string name="add_new_job_btn_add">Add</string>
    <string name="add_new_job_btn_cancel">Cancel</string>
    <string name="edit_text_new_job_header">New Job Header</string>
    <string name="edit_text_new_job_information">New Job Information</string>
    <string name="edit_text_new_contact_information">New Contact Information</string>
    <string name="job_situation_switch_text_open_position">Open Position</string>
    <string name="btn_update_text">Update</string>
</resources>