<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="60dp"
                    android:src="@drawable/ic_job_update_icon" />

                <EditText
                    android:id="@+id/et_new_job_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_new_job_header"
                    android:padding="16dp" />

                <EditText
                    android:id="@+id/et_new_job_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/edit_text_new_job_information"
                    android:padding="16dp" />

                <EditText
                    android:id="@+id/et_new_job_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/edit_text_new_contact_information"
                    android:padding="16dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/job_situation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:padding="16dp" />

                    <TextView
                        android:id="@+id/text_job_situation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/job_situation_switch_text_open_position"
                        android:layout_marginTop="30dp"
                        android:padding="16dp"/>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_update_job"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:padding="16dp"
                    android:text="@string/btn_update_text" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </ScrollView>
</LinearLayout>