<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp"
                    tools:layout_editor_absoluteX="141dp"
                    tools:layout_editor_absoluteY="80dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="40dp"
                        android:scaleType="center"
                        android:src="@drawable/ic_add_job_icon" />

                    <EditText
                        android:id="@+id/et_job_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:ems="10"
                        android:hint="@string/add_new_job_header_text"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/et_job_information"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:ems="10"
                        android:hint="@string/add_new_job_information_text"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/et_job_contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:ems="10"
                        android:hint="@string/add_new_contact_information_text"
                        android:inputType="textPersonName" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_add_database_job"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:layout_weight="1"
                            android:text="@string/add_new_job_btn_add" />

                        <Button
                            android:id="@+id/btn_back"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:layout_weight="1"
                            android:text="@string/add_new_job_btn_cancel" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>


</LinearLayout>